# SozvedieVisualStudio

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json
OldProject/qml/: AddObjectDialog.qml  TreeViewDelegate.qml  main.qml
OldProject/src/: main.cpp  numericdelegate.cpp  numericdelegate.h  postgresapp.cpp  postgresapp.h
PythonExample/: main.py
SozvedieVisualStudio/: CMakeLists.txt  SozvedieVisualStudio.cpp  SozvedieVisualStudio.h  SozvezdieVisualStudio.pro  SpecTableModel.qml  TreeModel.qml  database.cpp  database.h  main.qml  mainwindow.cpp  mainwindow.h  numericdelegate.cpp  numericdelegate.h  objecttreemodel.cpp  objecttreemodel.h  specmodel.cpp  specmodel.h  treemodel.cpp  treemodel.h  treeview.cpp  treeview.h
documentation/: REQUIREMENTS.md  StreemWayDiagram.md  UMLDiag.md  UserWay.md
scripts/: scripts.sql
